# tic-tac-toe-trainer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/code/: main.cpp
code/: Board.cpp  Board.h  BoardCell.cpp  BoardCell.h  BoardRenderer.cpp  BoardRenderer.h  CellType.h  MoveProviderBase.h  MoveProviderComputer.h  MoveProviderPlayer.cpp  main.cpp  ticTacToe.cpp  ticTacToe.h
core/: CMakeLists.txt
src/: Board.cpp  Board.h  BoardCell.h  BoardRenderer.cpp  BoardRenderer.h  CellType.cpp  CellType.h  MoveData.cpp  MoveData.h  MoveProviderBase.cpp  MoveProviderBase.h  MoveProviderComputer.cpp  MoveProviderComputer.h  MoveProviderComputerPredictor.cpp  MoveProviderComputerPredictor.h  MoveProviderPlayer.cpp  MoveProviderPlayer.h  main.cpp
